"Actualización de detalles de ventana y enlaces"

--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&family=Lato&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">
+    <link  rel="icon" href="img/Foto.png" type="image/png">
     <script type="text/javascript" src="js/index.js"></script>
     <script type="text/javascript" src"js/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <title>Portafolio</title>
   </head>
   <body>
     <div class="Top-header Main-colour">
-      <img class="Picture Small-pic" src="img/Foto_perfil.jpg">
+      <img class="Picture Small-pic" src="img/Foto.png">
       <ul class="Top-nav">
         <li class="Mobile-Tabs" onclick="ShowContainer('.About', this, 'Mobile-Tabs');" style="color: white"><div class="Picture Mini-pic"><i class="fas fa-info-circle"></i></div></li>
         <li class="Mobile-Tabs" onclick="ShowContainer('.Interests', this, 'Mobile-Tabs');"><div class="Picture Mini-pic"><i class="far fa-address-book"></i></div></li>
@@ -27,11 +29,11 @@
       <h2>alex.barrob@gmail.com</h2>
       <p>Soy egresado de la carrera Ingeniería en Informática, de la Universidad de Guadalajara.
         Actualmente radico en la ciudad de Guadalajara y tengo 22 años de edad.</p>
-      <p>Me considero una persona obstinada. Me gusta trabajar en equipo y aprender cosas nuevas me motiva y me mantiene interesado en lo que estoy haciendo.</p>
+      <p>Me considero una persona obstinada. Me gusta trabajar en equipo, aprender cosas nuevas me motiva y me mantiene interesado en lo que estoy haciendo.</p>
     </div>
     <div class="Super-container Interests" style="display:none">
       <h1>INTERESES</h1>
-      <p>Me gusta practicar distintos deportes, jugar videojuegos y vivir nuevas experiencias.</p>
+      <p>Me gusta ver películas, jugar videojuegos y vivir nuevas experiencias.</p>
       <p>Practico CrossFit y disfruto de jugar a otros deportes con amigos</p>
     </div>
     <div class="Super-container Skills" style="display:none">
@@ -109,11 +111,12 @@
         <div class="Project-type">
           <h3><i class="fas fa-user"></i> Proyectos individuales <i class="fas fa-user"></i></h3>
           <div class="Project-card">
-            <div class="Top-card" style="background-image: url('img/XMLGo.png')">
-              <div class="Pic-card">
-                <h4>XMLGo</h4>
+              <div class="Top-card" style="background-image: url('img/XMLGo.png')">
+                <div class="Pic-card">
+                  <h4>XMLGo</h4>
+                </div>
               </div>
-            </div>
+            </a>
             <div class="Bottom-card">
               <h3><i class="fab fa-windows"></i> Windows 7, 8, 10</h3>
               <h4><i class="fas fa-laptop-code"></i> C#</h4>
@@ -144,11 +147,13 @@
         <div class="Project-type">
           <h3><i class="fas fa-users"></i> Proyectos en equipo <i class="fas fa-users"></i></h3>
           <div class="Project-card">
-            <div class="Top-card" style="background-image: url('img/TeachMe.png')">
-              <div class="Pic-card">
-                <h4>TeachMe</h4>
+            <a class="Project-link" href="https://github.com/CUCEICSM/TeachMeBackend" target="_blank" title="Ver Proyecto">
+              <div class="Top-card" style="background-image: url('img/TeachMe.png')">
+                <div class="Pic-card">
+                  <h4>TeachMe</h4>
+                </div>
               </div>
-            </div>
+            </a>
             <div class="Bottom-card">
               <h3><i class="fas fa-globe"></i> Sitio Web</h3>
               <h4><i class="fas fa-globe"></i> HTML, CSS, JS, Django, Python</h4>
@@ -209,7 +214,7 @@
             <li>Mantenimiento de equipos de cómputo.</li>
             <li>Desarrollo de software para control de aulas.</li>
             <li>Instalación de computadoras, proyectores, etc.</li>
-            <li>Apoyo en activides recreativas y culturales.</li>
+            <li>Apoyo en actividades recreativas y culturales.</li>
             <li>Mantenimiento y conservación del área de trabajo.</li>
           </ul>
         </div>
@@ -232,7 +237,7 @@
 
   <aside class="Left-panel Main-colour">
     <div class="Personal_info">
-      <img class="Picture" src="img/Foto_perfil.jpg">
+      <img class="Picture" src="img/Foto.png">
       <h2 class="Name">Pablo Alejandro Barrera Robledo</h2>
       <div class="Navigation">
       <ul class="Titles">
